# comp371_PA3

./: .gitmodules  CMakeLists.txt  functions.h  main.cpp  shader.h
OpenGL/: READM.md  main.cpp  main_copy.cpp
OpenGL.xcodeproj/: project.pbxproj
OpenGL.xcodeproj/project.xcworkspace/xcuserdata/li.xcuserdatad/: UserInterfaceState.xcuserstate
OpenGL.xcodeproj/xcuserdata/li.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OpenGL/resources/shaders/: core.fs  texture.vs
doc/: README.md
resources/shaders/: core.vs  shadow.vs  texture.fs  texture.vs
